k8s/05-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: tsar-it-production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: tsar-it/billing-backend:4.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1500m"
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: tsar-it-production
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: backend
